@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-29T01:51:38Z",
+  "timestamp" : "2022-06-29T08:25:56Z",
   "count_outdated" : 2184,
   "uniques_outdated" : 450,
-  "count" : 2225,
-  "uniques" : 475,
+  "count" : 2226,
+  "uniques" : 476,
   "clones" : [
     {
       "timestamp": "2022-06-15T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
