@@ -1,5 +1,5 @@
 {
-  "count": 41,
+  "count": 42,
   "uniques": 11,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-06-28T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-29T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
